WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164663
ImageData does not match specification
https://bugs.webkit.org/show_bug.cgi?id=164663
Summary
ImageData does not match specification
Brent Fulgham
Reported
2016-11-11 16:14:24 PST
The HTML Canvas 2D Context spec <
https://www.w3.org/TR/2dcontext/
> now has: interface ImageData { readonly attribute unsigned long width; readonly attribute unsigned long height; readonly attribute Uint8ClampedArray data; }; We are handling these values as signed in WebCore, so we need to correct them to only accept unsigned values.
Attachments
Patch
(2.78 KB, patch)
2016-11-14 11:33 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2016-11-14 11:33:56 PST
Created
attachment 294723
[details]
Patch
WebKit Commit Bot
Comment 2
2016-11-28 12:27:57 PST
Comment on
attachment 294723
[details]
Patch Clearing flags on attachment: 294723 Committed
r209005
: <
http://trac.webkit.org/changeset/209005
>
WebKit Commit Bot
Comment 3
2016-11-28 12:28:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug